# advent_of_code

haskell/: .gitignore  build.sh  shell.nix
haskell/2024/: 1.hs
haskell/2025/: 1.hs
kotlin/: README.md  build.gradle.kts
kotlin/src/main/kotlin/me/diniamo/: aoc.kt  utils.kt
kotlin/src/main/kotlin/me/diniamo/years/twenty_twenty/: Aoc2020.kt  Day1.kt  Day2.kt  Day3.kt  Day4.kt  Day5.kt
kotlin/src/main/kotlin/me/diniamo/years/twenty_twenty_one/: Aoc2021.kt  Day1.kt  Day2.kt  Day3.kt  Day4.kt  Day5.kt  Day6.kt  Day7.kt
rust/: .gitignore  shell.nix
rust/aoc2022/: Cargo.toml
rust/aoc2022/src/: lib.rs  main.rs
rust/aoc2022/src/aoc_2022/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  mod.rs
rust/aoc2023/: Cargo.toml
rust/aoc2023/src/: day1.rs  day10.rs  day11.rs  day12.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
rust/aoc2024/: Cargo.toml
rust/aoc2024/src/: day1.rs  day2.rs  day3.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs
zig/: .gitignore  build.zig  build.zig.zon  shell.nix  template.zig
zig/src/: utils.zig
zig/src/2024/: 1.zig  4.zig  6.zig
