[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
grid = "0.15.0"
itertools = "0.13.0"

[dependencies.regex]
version = "1.11.1"
default-features = false
features = ["perf", "default", "std"]

[dependencies.multimap]
version = "0.10.0"
default-features = false
